--- a/package.json
+++ b/package.json
@@ -4,14 +4,16 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "lint": "eslint ./"
+    "start-dev": "nodemon ./src/server.js",
+    "lint": "eslint ./src"
   },
   "keywords": [],
   "author": "Azsa Nurwahyudi",
   "license": "ISC",
   "dependencies": {
     "@hapi/hapi": "^21.2.1",
-    "nanoid": "^4.0.0"
+    "nanoid": "^4.0.0",
+    "nodemon": "^2.0.20"
   },
   "devDependencies": {
     "eslint": "^8.33.0",
